--- a/index.html
+++ b/index.html
@@ -13,13 +13,11 @@
     <section class="services">
       <div class="services__cards">
         <!-- Plumbing  -->
-        <div class="card-item plumbing">
+        <div class="card-item border-green">
           <div class="card-item__image-wrapper">
-            <img
-              class="image"
-              src="./design/assets/plumbing.svg"
-              alt="Plumbing"
-            />
+            <svg class="image">
+              <use xlink:href="sprite.svg#plumbing"></use>
+            </svg>
           </div>
 
           <div class="card-item__body">
@@ -37,9 +35,11 @@
           </div>
         </div>
         <!-- Painting -->
-        <div class="card-item painting">
+        <div class="card-item border-blue">
           <div class="card-item__image-wrapper">
-            <img class="image" src="./design/assets/paint.svg" alt="Plumbing" />
+            <svg class="image">
+              <use xlink:href="sprite.svg#paint"></use>
+            </svg>
           </div>
           <div class="card-item__body">
             <h2 class="body-title">Drywall & painting</h2>
@@ -56,13 +56,11 @@
           </div>
         </div>
         <!-- Furniture -->
-        <div class="card-item furniture">
+        <div class="card-item border-yellow">
           <div class="card-item__image-wrapper">
-            <img
-              class="image"
-              src="./design/assets/furniture.svg"
-              alt="furniture"
-            />
+            <svg class="image">
+              <use xlink:href="sprite.svg#furniture"></use>
+            </svg>
           </div>
           <div class="card-item__body">
             <h2 class="body-title">Furniture assembly</h2>
@@ -79,13 +77,11 @@
           </div>
         </div>
         <!-- Electrical -->
-        <div class="card-item electrical">
+        <div class="card-item border-red">
           <div class="card-item__image-wrapper">
-            <img
-              class="image"
-              src="./design/assets/electrical.svg"
-              alt="electrical"
-            />
+            <svg class="image">
+              <use xlink:href="sprite.svg#electrical"></use>
+            </svg>
           </div>
           <div class="card-item__body">
             <h2 class="body-title">Electrical</h2>
@@ -103,9 +99,11 @@
           </div>
         </div>
         <!-- Doors -->
-        <div class="card-item doors">
+        <div class="card-item border-green">
           <div class="card-item__image-wrapper">
-            <img class="image" src="./design/assets/door.svg" alt="door" />
+            <svg class="image">
+              <use xlink:href="sprite.svg#door"></use>
+            </svg>
           </div>
           <div class="card-item__body">
             <h2 class="body-title">Doors & windows</h2>
@@ -121,13 +119,11 @@
           </div>
         </div>
         <!-- Hanging -->
-        <div class="card-item hanging">
+        <div class="card-item border-blue">
           <div class="card-item__image-wrapper">
-            <img
-              class="image"
-              src="./design/assets/hanging.svg"
-              alt="hanging"
-            />
+            <svg class="image">
+              <use xlink:href="sprite.svg#hanging"></use>
+            </svg>
           </div>
           <div class="card-item__body">
             <h2 class="body-title">Hanging & mounting</h2>
@@ -144,13 +140,11 @@
         </div>
 
         <!-- Installation -->
-        <div class="card-item installation">
+        <div class="card-item border-yellow">
           <div class="card-item__image-wrapper">
-            <img
-              class="image"
-              src="./design/assets/instalation.svg"
-              alt="instalation"
-            />
+            <svg class="image">
+              <use xlink:href="sprite.svg#istallation"></use>
+            </svg>
           </div>
           <div class="card-item__body">
             <h2 class="body-title">Appliance installation</h2>
@@ -165,9 +159,11 @@
           </div>
         </div>
         <!-- Home -->
-        <div class="card-item home">
+        <div class="card-item border-red">
           <div class="card-item__image-wrapper">
-            <img class="image" src="./design/assets/home.svg" alt="home" />
+            <svg class="image">
+              <use xlink:href="sprite.svg#home"></use>
+            </svg>
           </div>
           <div class="card-item__body">
             <h2 class="body-title">Smart home</h2>
@@ -185,13 +181,11 @@
           </div>
         </div>
         <!-- Outdoor -->
-        <div class="card-item outdoor">
+        <div class="card-item border-green">
           <div class="card-item__image-wrapper">
-            <img
-              class="image"
-              src="./design/assets/outdoor.svg"
-              alt="outdoor"
-            />
+            <svg class="image">
+              <use xlink:href="sprite.svg#outdoor"></use>
+            </svg>
           </div>
           <div class="card-item__body">
             <h2 class="body-title">Outdoor</h2>
